--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "eleventy-netlify-boilerplate",
-  "version": "1.0.1",
-  "description": "A boilerplate for building a fast static website with the Eleventy static site generator, for deployment to Netlify.",
+  "name": "kkga.me",
+  "version": "1",
+  "description": "source for kkga.me",
   "scripts": {
     "build": "npx eleventy",
     "watch": "npx eleventy --watch",
+    "start": "npx eleventy --serve",
     "debug": "DEBUG=* npx eleventy"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate"
+    "url": "https://github.com/kkga/kkga"
   },
   "author": {
     "name": "Dan Urbanowicz",
     "email": "dan.urbanowicz@gmail.com",
     "url": "https://www.danurbanowicz.com/"
   },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate/issues"
-  },
-  "homepage": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@11ty/eleventy": "^0.7.0",
     "luxon": "^1.10.0",
     "markdown-it": "^8.4.1",
-    "markdown-it-anchor": "^4.0.0"
+    "markdown-it-anchor": "^4.0.0",
+    "prettier": "^1.16.4"
   },
   "dependencies": {
     "clean-css": "^4.2.1",
