--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@11ty/eleventy": "^0.7.0",
+    "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.1",
     "luxon": "^1.10.0",
     "markdown-it": "^8.4.1",
     "markdown-it-anchor": "^4.0.0",
@@ -29,6 +31,5 @@
     "clean-css": "^4.2.1",
     "html-minifier": "^3.5.21",
     "uglify-es": "^3.3.9",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3"
   }
 }
