--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   "dependencies": {
     "clean-css": "^4.2.1",
     "html-minifier": "^3.5.21",
-    "uglify-es": "^3.3.9",
+    "uglify-es": "^3.3.9"
   }
 }
