--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "clean-css": "^4.2.1",
     "html-minifier": "^3.5.21",
+    "markdown-it-container": "^2.0.0",
     "uglify-es": "^3.3.9"
   }
 }
