--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean-css": "^4.2.1",
     "html-minifier": "^3.5.21",
     "markdown-it-container": "^2.0.0",
+    "markdown-it-video": "^0.6.3",
     "uglify-es": "^3.3.9"
   }
 }
